fix: nowrap für More-Text und Icon.

--- a/src/QUI/Controls/ChildrenList.AdvancedArticleList.css
+++ b/src/QUI/Controls/ChildrenList.AdvancedArticleList.css
@@ -94,8 +94,8 @@
 }
 
 .control-news-list-show-more {
+    display: inline-block;
     font-weight: 500;
-    /*text-decoration: underline;*/
     white-space: nowrap;
 }
 
